# radar_detection_ros

./: .gitignore  Readme.md
devel/: .catkin  .rosinstall  _setup_util.py
devel/lib/libtorch_demo/: demo_torch_node
devel/lib/pkgconfig/: libtorch_demo.pc
devel/share/libtorch_demo/cmake/: libtorch_demoConfig.cmake
install/lib/pkgconfig/: libtorch_demo.pc
install/share/libtorch_demo/: package.xml
src/libtorch_demo/: CMakeLists.txt
src/libtorch_demo/models/: colision_detector.pt
src/libtorch_demo/src/: demo_node.cpp
src/libtorch_demo/src/ColisionDetector/: CMakeLists.txt  ColisionDetector.cpp  ColisionDetector.h
